# pam_couchdb

./: CMakeLists.txt  LICENSE  README.org
src/: CMakeLists.txt  curl.cpp  curl.hpp  pam.cpp
src/tests/: testCouchAuth.cpp
